// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateVault renders component 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <Memo(WithStyles(Snackbar))
    fullWidth={true}
    message=""
    open={false}
    variant="loading"
  />
  <Memo(WithStyles(Snackbar))
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
  <WithStyles(ForwardRef(Grid))
    alignContent="flex-start"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
    >
      <WithStyles(ForwardRef(Paper))
        className="paper-mock"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="flex-start"
          className="welcome-mock"
          container={true}
          direction="row"
          justify="center"
          wrap="wrap"
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            className="logoContainer-mock"
            container={true}
            item={true}
            justify="center"
            xs={12}
          >
            <Memo(Icon)
              className="icon-mock"
              src="test-file-stub"
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            container={true}
            item={true}
            justify="center"
            wrap="wrap"
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="title-mock"
              gutterBottom={true}
              variant="h4"
            >
              Create a password
            </WithStyles(ForwardRef(Typography))>
            <WithStyles(ForwardRef(Typography))
              align="justify"
              className="caption-mock"
              gutterBottom={true}
              variant="body1"
            >
              To set up the secure Zbay vault, you need to create a password.
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="form-mock"
            item={true}
          >
            <VaultCreator
              buttonStyles="button-mock"
              className="vault-mock"
              finished={false}
              inProgress={false}
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Paper))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`CreateVault renders error 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <Memo(WithStyles(Snackbar))
    fullWidth={true}
    message=""
    open={false}
    variant="loading"
  />
  <Memo(WithStyles(Snackbar))
    message="test error"
    onClose={[MockFunction]}
    open={true}
    variant="error"
  />
  <WithStyles(ForwardRef(Grid))
    alignContent="flex-start"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
    >
      <WithStyles(ForwardRef(Paper))
        className="paper-mock"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="flex-start"
          className="welcome-mock"
          container={true}
          direction="row"
          justify="center"
          wrap="wrap"
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            className="logoContainer-mock"
            container={true}
            item={true}
            justify="center"
            xs={12}
          >
            <Memo(Icon)
              className="icon-mock"
              src="test-file-stub"
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            container={true}
            item={true}
            justify="center"
            wrap="wrap"
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="title-mock"
              gutterBottom={true}
              variant="h4"
            >
              Create a password
            </WithStyles(ForwardRef(Typography))>
            <WithStyles(ForwardRef(Typography))
              align="justify"
              className="caption-mock"
              gutterBottom={true}
              variant="body1"
            >
              To set up the secure Zbay vault, you need to create a password.
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="form-mock"
            item={true}
          >
            <VaultCreator
              buttonStyles="button-mock"
              className="vault-mock"
              finished={false}
              inProgress={false}
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Paper))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`CreateVault renders inProgress 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <Memo(WithStyles(Snackbar))
    fullWidth={true}
    message="creating"
    open={true}
    variant="loading"
  />
  <Memo(WithStyles(Snackbar))
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
  <WithStyles(ForwardRef(Grid))
    alignContent="flex-start"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
    >
      <WithStyles(ForwardRef(Paper))
        className="paper-mock"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="flex-start"
          className="welcome-mock"
          container={true}
          direction="row"
          justify="center"
          wrap="wrap"
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            className="logoContainer-mock"
            container={true}
            item={true}
            justify="center"
            xs={12}
          >
            <Memo(Icon)
              className="icon-mock"
              src="test-file-stub"
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            container={true}
            item={true}
            justify="center"
            wrap="wrap"
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="title-mock"
              gutterBottom={true}
              variant="h4"
            >
              Create a password
            </WithStyles(ForwardRef(Typography))>
            <WithStyles(ForwardRef(Typography))
              align="justify"
              className="caption-mock"
              gutterBottom={true}
              variant="body1"
            >
              To set up the secure Zbay vault, you need to create a password.
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="form-mock"
            item={true}
          >
            <VaultCreator
              buttonStyles="button-mock"
              className="vault-mock"
              finished={false}
              inProgress={true}
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Paper))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(WindowWrapper))>
`;
